<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="verMiembros">Ver Miembros</string>
	<string name="verGastos">Ver Gastos</string>
	<string name="editarGrupo">Editar Grupo</string>
	<string name="borrarGrupo">Borrar Grupo</string>
    <string name="app_name">gastos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pppl">Pantalla Principal</string>
    <string name="new_group">Nuevo Grupo</string>
    <string name="watch_group">Ver/Editar Grupo</string>
    <string name="new_member">Nuevo Miembro</string>
    <string name="group_name">Nombre del Grupo</string>
    <string name="group_members">Miembros del grupo</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="sync">Sincronizar</string>
    <string name="notsync">No sincronizar</string>
    <string name="miembros"></string>
    <string name="pago">pagó</string>
    <string name="a">A</string>
    <string name="grupos">Grupos</string>
    <string name="g1">¿Quién pagó?</string>
    <string name="g2">¿Para quién?</string>
    <string name="g3">¿Cuánto?</string>
    <string name="g4">¿Concepto?</string>
    <string name="g5">¿Fecha?</string>
    <string name="g6">¿Hora?</string>
    <string name="addGastos">Añadir gasto</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="recibo">Recibo</string>
    <string name="mapa">Mapa</string>
    <string name="nogrupos">No tiene grupos</string>
    <string name="nogastos">No tiene gastos</string>
    <string name="nodeudas">No tiene deudas</string>
	<string name="calcular">Calcular</string>
	<string name="verRecibo">Ver Recibo</string>
	<string name="verUbicacion">Ver Ubicación</string>
	<string name="editarGasto">Editar Gasto</string>
	<string name="borrarGasto">Borrar Gasto</string>
</resources>