<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g1" />

   <Spinner 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/g1"
        android:id="@+id/quien_pago"
        android:ems="10" 
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_height="wrap_content"
        android:text="@string/g2" />
<TableRow >
     <Button 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/g2"
   
android:onClick="clickParaQuien"
        android:ems="10" 
        android:id="@+id/para_quien" 
        />
     <TextView 
	    android:id="@+id/aquien"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:text=""
	
         />
</TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/g3" />

    <EditText
        android:id="@+id/cuanto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_height="wrap_content"
        android:text="@string/g4" />

     
	
     <TableRow>
	
	    <EditText
	        android:id="@+id/concepto"
	        android:layout_width="154dp"
	        android:inputType="text"
	        android:layout_height="wrap_content"
	        android:ems="10" />
	
	    <Button
	        android:id="@+id/foto"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:onClick="clickFoto"
	        android:text="@string/recibo" />

	</TableRow>
	
	<TableRow >
	    <TextView
	        android:layout_marginTop="20dip"
	        android:id="@+id/textView5"
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:text="@string/g5" />
	
	    <TextView
	        android:layout_marginTop="20dip"
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/g6" />
    </TableRow>
	
	<TableRow >
	    <EditText
	        android:id="@+id/fecha"
	        android:layout_width="154dp"
	        android:inputType="date"
	        android:layout_height="wrap_content"
	        android:ems="10" />
		<EditText
		        android:id="@+id/hora"
		        android:layout_width="154dp"
		        android:inputType="time"
		        android:layout_height="wrap_content"
		        android:ems="10" />
	</TableRow>
	
	<TableRow >
	    <TextView
	        android:layout_marginTop="20dip"
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:text="@string/ubicacion" />
	    
	     <Button
	        android:id="@+id/ubicacion"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:onClick="clickUbicacion"
	        android:text="@string/calcular" />
	</TableRow>
	<TableRow >
	     <Button
	        android:id="@+id/acept3"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:onClick="clickAceptar"
	        android:text="@string/accept" />
	     
	     <Button
	        android:id="@+id/cancel3"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:onClick="clickCancelar" 
	        android:text="@string/cancel" />
	    
	</TableRow>
	</TableLayout>
</ScrollView>
