<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dip" >

    
		
		
    <TextView
        android:id="@+id/textView1"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/group_name" />

    <EditText
        android:id="@+id/gname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text" >       
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/group_members" />

    <Button
        android:id="@+id/addmember"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickMiembro"
        android:text="@string/new_member" />

    <TextView
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:textIsSelectable="true"/>

    <Button
        android:id="@+id/sincronizarMiembro"
        android:layout_width="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/sync" />
	<LinearLayout
	    android:id="@+id/botones"
	    android:layout_marginTop="10dp"
	    android:layout_weight="1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal" >
		    
		<Button
	        android:id="@+id/acep1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonStyleSmall"
	        android:text="@string/accept" />
	
	    <Button
	        android:id="@+id/canc1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonStyleSmall"
	        android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>