<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="10sp">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
         />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10sp"
        android:layout_below="@id/text1"/>

        

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/name" />

     <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:layout_below="@id/text2"
        android:inputType="textEmailAddress" 
        android:paddingTop="10sp"
       />
    
    <Button
        android:id="@+id/acept2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        
        android:paddingTop="10sp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/cancel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/acept2"
        android:layout_alignRight="@id/email"
        android:layout_below="@id/email"
        android:paddingTop="10sp"
        android:text="@string/cancel" />
	
	</RelativeLayout>

    
